--- a/_config.yml
+++ b/_config.yml
@@ -154,9 +154,10 @@ giscus:
 # External sources.
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
-external_sources:
-  - name: #medium.com
-    rss_url: #https://medium.com/@shahin-gelareh/feed
+
+#external_sources:
+# sg - name: #medium.com
+# sg    rss_url: #https://medium.com/@shahin-gelareh/feed
 
 # -----------------------------------------------------------------------------
 # Collections
