bib and abbrevtion fixed

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -4,3 +4,17 @@
 
 "PhysRev":
   url: https://journals.aps.org/
+
+"TRE":
+  url: https://www.sciencedirect.com/journal/transportation-research-part-e-logistics-and-transportation-review/
+
+"COR":
+  url: https://www.sciencedirect.com/journal/computers-and-operations-research/
+
+"OMEGA":
+  url: https://www.sciencedirect.com/journal/omega/
+
+"EJOR":
+  url: https://www.sciencedirect.com/journal/european-journal-of-operational-research/
+
+
