--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -18,3 +18,7 @@
   url: https://www.sciencedirect.com/journal/european-journal-of-operational-research/
 
 
+"RAIRO":
+  url: https://www.rairo-ro.org//
+
+
