--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -4,4 +4,6 @@
 
 "PhysRev":
   url: https://journals.aps.org/
-  
+
+"TRE":
+  url: https://www.sciencedirect.com/journal/transportation-research-part-e-logistics-and-transportation-review/
