--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -7,3 +7,27 @@
 
 "TRE":
   url: https://www.sciencedirect.com/journal/transportation-research-part-e-logistics-and-transportation-review/
+
+"COR":
+  url: https://www.sciencedirect.com/journal/computers-and-operations-research/
+
+"OMEGA":
+  url: https://www.sciencedirect.com/journal/omega/
+
+"EJOR":
+  url: https://www.sciencedirect.com/journal/european-journal-of-operational-research/
+
+"RAIRO":
+  url: https://www.rairo-ro.org/
+
+"ANOR":
+  url: https://www.springer.com/journal/10479/
+
+"AMC":
+  url: https://www.sciencedirect.com/journal/applied-mathematics-and-computation/
+
+"AMM":
+  url: https://www.sciencedirect.com/journal/applied-mathematical-modelling/
+
+"ROADEF":
+  url: https://www.roadef.org/societe-francaise-recherche-operationnelle-aide-decision/
