recent publications added

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -31,3 +31,10 @@
 
 "ROADEF":
   url: https://www.roadef.org/societe-francaise-recherche-operationnelle-aide-decision/
+
+"JOH":
+  url: https://www.springer.com/journal/10732/
+
+"ArXive":
+  url: https://arxiv.org//
+
